; ModuleID = '/home/carl/AnghaBench/i3/src/extr_ipc.c__sync_json_int.c'
source_filename = "/home/carl/AnghaBench/i3/src/extr_ipc.c__sync_json_int.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sync_state = type { i64, i64, i32 }

@.str = private unnamed_addr constant [4 x i8] c"rnd\00", align 1
@.str.1 = private unnamed_addr constant [7 x i8] c"window\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i64)* @_sync_json_int to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @_sync_json_int(i8* %0, i64 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.sync_state*, align 8
  store i8* %0, i8** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = bitcast i8* %6 to %struct.sync_state*
  store %struct.sync_state* %7, %struct.sync_state** %5, align 8
  %8 = load %struct.sync_state*, %struct.sync_state** %5, align 8
  %9 = getelementptr inbounds %struct.sync_state, %struct.sync_state* %8, i32 0, i32 2
  %10 = load i32, i32* %9, align 8
  %11 = call i64 @strcasecmp(i32 %10, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0))
  %12 = icmp eq i64 %11, 0
  br i1 %12, label %13, label %17

13:                                               ; preds = %2
  %14 = load i64, i64* %4, align 8
  %15 = load %struct.sync_state*, %struct.sync_state** %5, align 8
  %16 = getelementptr inbounds %struct.sync_state, %struct.sync_state* %15, i32 0, i32 0
  store i64 %14, i64* %16, align 8
  br label %28

17:                                               ; preds = %2
  %18 = load %struct.sync_state*, %struct.sync_state** %5, align 8
  %19 = getelementptr inbounds %struct.sync_state, %struct.sync_state* %18, i32 0, i32 2
  %20 = load i32, i32* %19, align 8
  %21 = call i64 @strcasecmp(i32 %20, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i64 0, i64 0))
  %22 = icmp eq i64 %21, 0
  br i1 %22, label %23, label %27

23:                                               ; preds = %17
  %24 = load i64, i64* %4, align 8
  %25 = load %struct.sync_state*, %struct.sync_state** %5, align 8
  %26 = getelementptr inbounds %struct.sync_state, %struct.sync_state* %25, i32 0, i32 1
  store i64 %24, i64* %26, align 8
  br label %27

27:                                               ; preds = %23, %17
  br label %28

28:                                               ; preds = %27, %13
  ret i32 1
}

declare dso_local i64 @strcasecmp(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
